src/test/deca/syntax/invalid/20_entier_large.deca
// Description:
//    entier trés large
//
// Resultats:
//    Ligne 12 : Erreur de syntaxe.
//
// Historique:
//    cree le 01/01/2023

// Un exemple de programme Deca
{
    int a =6666666666666666666666666666;

}